--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
+    "framer-motion": "^11.1.5",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
