--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "classnames": "^2.5.1",
     "framer-motion": "^11.1.5",
+    "graphql-request": "^7.0.1",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
