chore: moved gql api requests to using inbuilt fetch instead of graphql-request

--- a/codegen.yml
+++ b/codegen.yml
@@ -6,12 +6,14 @@ generates:
       - schema-ast
     config:
       includeDirectives: true
+      documentMode: string
   ./app/schema/graphql.ts:
     plugins:
       - typescript
       - typescript-operations
       - typed-document-node
     config:
+      documentMode: string
       scalars:
         Date: string
         DateTime: string
