--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
     "classnames": "^2.5.1",
     "framer-motion": "^11.1.5",
     "graphql-request": "^7.0.1",
+    "js-base64": "^3.7.7",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.1.0"
+    "react-icons": "^5.1.0",
+    "rss": "^1.2.2",
+    "sanitize-html": "^2.13.0",
+    "slug": "^9.0.0",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
@@ -33,6 +38,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/rss": "^0.0.32",
+    "@types/sanitize-html": "^2.11.0",
     "autoprefixer": "^10.4.19",
     "concurrently": "^8.2.2",
     "eslint": "^8",
