--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^11.1.5",
     "graphql-request": "^7.0.1",
     "js-base64": "^3.7.7",
+    "js-cookie": "^3.0.5",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
@@ -26,6 +27,7 @@
     "rss": "^1.2.2",
     "sanitize-html": "^2.13.0",
     "slug": "^9.0.0",
+    "uuid": "^9.0.1",
     "validator": "^13.12.0"
   },
   "devDependencies": {
