--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   "version": "2.0.0",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"next\" \"pnpm codegen --watch\" --names next,codegen",
+    "dev": "concurrently \"next\" \"pnpm codegen --watch\" \"pnpm codegen-github --watch\" --names next,codegen,cogeden-github --prefix-colors yellow,green,blue",
     "codegen": "graphql-codegen --config codegen.yml",
     "load-skills": "ts-node ./scripts/loadSkills.ts",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen-github": "graphql-codegen --config codegen-github.yml"
   },
   "dependencies": {
     "classnames": "^2.5.1",
@@ -31,7 +32,7 @@
     "validator": "^13.12.0"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/cli": "5.0.2",
     "@graphql-codegen/typed-document-node": "^5.0.6",
     "@graphql-codegen/typescript": "^4.0.6",
     "@graphql-codegen/typescript-operations": "^4.2.0",
@@ -50,6 +51,8 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@graphql-codegen/introspection": "4.0.3",
+    "@graphql-codegen/client-preset": "4.2.6"
   }
 }
