--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "graphql-request": "^7.0.1",
     "js-base64": "^3.7.7",
     "js-cookie": "^3.0.5",
-    "next": "14.1.4",
+    "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
