--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/react-dom": "^18",
     "@types/rss": "^0.0.32",
     "@types/sanitize-html": "^2.11.0",
+    "@types/slug": "^5.0.8",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.19",
     "concurrently": "^8.2.2",
