--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "codegen-github": "graphql-codegen --config codegen-github.yml"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "classnames": "^2.5.1",
     "framer-motion": "^11.1.5",
     "graphql-request": "^7.0.1",
