--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "version": "2.0.0",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"next\" \"pnpm codegen-hashnode --watch\" \"pnpm codegen-github --watch\" --names next,codegen-hashnode,cogeden-github --prefix-colors yellow,green,blue",
+    "dev": "concurrently \"next dev\" \"pnpm codegen-hashnode --watch\" \"pnpm codegen-github --watch\" --names next,codegen-hashnode,cogeden-github --prefix-colors yellow,green,blue",
     "codegen-hashnode": "graphql-codegen --config codegen-hashnode.yml",
     "load-skills": "ts-node ./scripts/loadSkills.ts",
     "build": "next build",
@@ -19,13 +19,13 @@
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "classnames": "^2.5.1",
-    "framer-motion": "^11.1.5",
+    "framer-motion": "^11.18.2",
     "graphql-request": "^7.0.1",
     "js-base64": "^3.7.7",
     "js-cookie": "^3.0.5",
-    "next": "^14.2.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "15.1.6",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-icons": "^5.1.0",
     "rss": "^1.2.2",
     "sanitize-html": "^2.13.0",
@@ -45,8 +45,8 @@
     "@tailwindcss/typography": "^0.5.13",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3",
     "@types/rss": "^0.0.32",
     "@types/sanitize-html": "^2.11.0",
     "@types/slug": "^5.0.8",
@@ -54,10 +54,14 @@
     "autoprefixer": "^10.4.19",
     "concurrently": "^8.2.2",
     "eslint": "^8",
-    "eslint-config-next": "14.1.4",
+    "eslint-config-next": "15.1.6",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.2",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3"
   }
 }
