--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@graphql-codegen/typescript-operations": "^4.2.0",
     "@parcel/watcher": "^2.4.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/typography": "^0.5.13",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
@@ -51,12 +52,11 @@
     "@types/sanitize-html": "^2.11.0",
     "@types/slug": "^5.0.8",
     "@types/uuid": "^9.0.8",
-    "autoprefixer": "^10.4.19",
     "concurrently": "^8.2.2",
     "eslint": "^8",
     "eslint-config-next": "15.1.6",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^4.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5"
   },
