--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "load-skills": "ts-node ./scripts/loadSkills.ts",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "codegen-github": "graphql-codegen --config codegen-github.yml"
   },
   "dependencies": {
@@ -23,9 +23,9 @@
     "js-base64": "^3.7.7",
     "js-cookie": "^3.0.5",
     "motion": "^12.19.1",
-    "next": "^15.2.4",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "next": "16.0.7",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "react-icons": "^5.1.0",
     "rss": "^1.2.2",
     "sanitize-html": "^2.13.0",
@@ -46,22 +46,22 @@
     "@tailwindcss/typography": "^0.5.13",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
-    "@types/react": "19.0.8",
-    "@types/react-dom": "19.0.3",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "@types/rss": "^0.0.32",
     "@types/sanitize-html": "^2.11.0",
     "@types/slug": "^5.0.8",
     "@types/uuid": "^9.0.8",
     "concurrently": "^8.2.2",
-    "eslint": "^8",
-    "eslint-config-next": "15.1.6",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "16.0.7",
     "postcss": "^8.4.38",
     "tailwindcss": "^4.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5"
   },
   "overrides": {
-    "@types/react": "19.0.8",
-    "@types/react-dom": "19.0.3"
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3"
   }
 }
